--- a/bootstrap.html
+++ b/bootstrap.html
@@ -30,8 +30,14 @@
             <li><a href="#">Contact</a></li>
             <li><a href="#">Shop</a></li>
           </ul>
+          <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Login</a></li>
+            <li><a id="login-button" href="#">Login</a></li>
             <li><a href="#">Favorite Melons</a></li>
             <li><a href="#">Settings</a></li>
             <li><a href="#">Profile</a></li>
@@ -40,6 +46,23 @@
       </div><!-- /.container-fluid -->
     </nav>
     <div class="container">
+        <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+          <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Login</h4>
+              </div>
+              <div class="modal-body">
+                Username: <input type="text"> <br><br>
+                Password: <input type="text">
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary">Login</button>
+              </div>
+            </div><!-- /.modal-content -->
+          </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
         <div class="row">
             <div class="col-sm-offset-3 col-sm-6">
                 <img class="center-block" id="melon-image" src="488799-melon-desktop-backgrounds.png">
@@ -107,7 +130,12 @@ further study. Leave this at the bottom and code above it. -->
 
 <script src="http://code.jquery.com/jquery.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+    $('#login-button').on('click', function(){
+        $('#myModal').modal('show');
+    });
 
+</script>
 </body>
 
 </html>
